# scraping

./: .gitignore  README.md  analyze_website.py  init_push_new_repo.sh  project_setup_uv.sh  pyproject.toml
PLANS/: BOT_PROTECTION_GUIDE.md  Initial_project_plan.md  PARTIAL_DIFF_GUIDE.md  github_change_ast_plan.md
package_versions/: pv_20250530.txt  pv_20250531.txt
src/scraping/: README_github_analyzer.md  __init__.py  __main__.py  cli.py  content_monitor.py  diff_styles.css  dynamic_content.py  github_analyzer.py  github_cli.py  github_example.py  scraper.py  spec_generator.py  structure_capture.py  utils.py
test/: demo_partial_diff.py  sample_annotated_diff.html  test_analysis.py  test_diff_annotator.py  test_diff_functionality.py  test_hims_debug.py  test_stealth.py
